<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scrap_paper"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:layout_centerVertical="true"
            android:text="@string/edit"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:paddingRight="@dimen/padding_large"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:visibility="gone"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_cancel"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:visibility="gone"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_delete"
            android:visibility="gone"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="8dp"
            android:text="@string/all"
            android:textColor="@color/text_black"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_draft"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>