<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/two_zero"
                android:paddingTop="@dimen/two_zero">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:text="@string/photo"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_pop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/two_zero"
                android:paddingTop="@dimen/two_zero">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_album" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:text="@string/album"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_pop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_material"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/two_zero"
                android:paddingTop="@dimen/two_zero">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:text="@string/my_material"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_pop" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one"
            android:background="@color/line_gray" />
    </LinearLayout>
</LinearLayout>