<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:src="@drawable/icon_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/rl_more_template"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_more_template"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/more_template"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line_more_template"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_alignLeft="@+id/tv_more_template"
                    android:layout_alignRight="@+id/tv_more_template"
                    android:layout_below="@+id/tv_more_template"
                    android:layout_marginTop="20dp"
                    android:background="@color/line_black" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_common_template"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_common_template"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/local_template"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:id="@+id/line_common_template"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_alignLeft="@+id/tv_common_template"
                    android:layout_alignRight="@+id/tv_common_template"
                    android:layout_below="@+id/tv_common_template"
                    android:layout_marginTop="20dp"
                    android:background="@color/line_black"
                    android:visibility="invisible" />
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:text="@string/manage"
            android:textColor="@color/text_black"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>