<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:src="@drawable/icon_back" />

            <LinearLayout
                android:id="@+id/ll_move_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@+id/ll_move_down"
                android:background="@color/bg_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:id="@+id/iv_move_up"
                    android:layout_width="@dimen/img_top"
                    android:layout_height="@dimen/img_top"
                    android:src="@drawable/icon_move_up_n" />

                <TextView
                    android:id="@+id/tv_move_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_up"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_move_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@+id/ll_send"
                android:background="@color/bg_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:id="@+id/iv_move_down"
                    android:layout_width="@dimen/img_top"
                    android:layout_height="@dimen/img_top"
                    android:src="@drawable/icon_move_down_n" />

                <TextView
                    android:id="@+id/tv_move_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_down"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:background="@color/bg_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_top"
                    android:layout_height="@dimen/img_top"
                    android:src="@drawable/icon_print_p"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="@color/text_orange"
                    android:textSize="18dp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_weight="1"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_sticker_up" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/bg_white" />
            </FrameLayout>

            <com.xiaopo.flying.exsticker.ExSticker
                android:id="@+id/exsticker"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/bg_white" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_sticker_down" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/one_six">

            <LinearLayout
                android:id="@+id/ll_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_bottom"
                    android:layout_height="@dimen/img_bottom"
                    android:src="@drawable/icon_text" />

                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_bottom"
                    android:layout_height="@dimen/img_bottom"
                    android:src="@drawable/icon_picture" />

                <TextView
                    android:id="@+id/tv_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picture"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_emoji"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_bottom"
                    android:layout_height="@dimen/img_bottom"
                    android:src="@drawable/icon_emoji" />

                <TextView
                    android:id="@+id/tv_emoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emoji"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_theme"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_bottom"
                    android:layout_height="@dimen/img_bottom"
                    android:src="@drawable/icon_theme" />

                <TextView
                    android:id="@+id/tv_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frame"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_qr_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_bottom"
                    android:layout_height="@dimen/img_bottom"
                    android:src="@drawable/icon_bottom_qr_code" />

                <TextView
                    android:id="@+id/tv_qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_code"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_graffiti"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal">

                <ImageView
                    android:layout_width="@dimen/img_bottom"
                    android:layout_height="@dimen/img_bottom"
                    android:src="@drawable/icon_graffiti" />

                <TextView
                    android:id="@+id/tv_graffiti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graffiti"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_bottom" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bubble_sure"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_bubble_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_bubble"
                android:gravity="top"
                android:hint="双击编辑文本内容"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_bubble_sure"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@color/text_orange"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="确定"
                android:textColor="@color/bg_white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <com.ailide.apartmentsabc.views.sticker.ContentViewPager
        android:id="@+id/vp_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60.5dp" />

</FrameLayout>